@@ -7,7 +7,7 @@
 
   <groupId>de.nohope</groupId>
   <artifactId>chesscraft-placeholders</artifactId>
-  <version>1.1.0</version>
+  <version>1.1.1</version>
 
   <properties>
     <java.version>17</java.version>
@@ -67,8 +67,9 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.10.1</version>
         <configuration>
-          <source>${java.version}</source>
-          <target>${java.version}</target>
+          <source>21</source>
+          <target>21</target>
+          <compilerArgs>--enable-preview</compilerArgs>
         </configuration>
       </plugin>
 
